# oxo

./: .gitignore  .gitmodules  .mypy.ini  .pylintrc  AGENTS.md  CLAUDE.md  CLOUD_RUN_README.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PR.diff  README.md  SECURITY.md  lint-requirements.txt  main.spec  mkdocs.yml  multi_asset_demo.yaml  netlify.toml  oxo.spec  pylintrc  ruff.toml  setup.cfg  setup.py  stdeb.cfg  tox.ini  typing_requirements.txt
.github/: CODEOWNERS
.github/workflows/: deb_installers.yaml  lint_format_checker.yaml  mac_installer.yaml  pylint.yml  pytest-linux.yml  pytest-windows.yml  pytest.yml  python-package-lint.yml  python-packagel-int..yml  python-publish.yml  pythonpackagelint..yml  release-linux-macos.yaml  release-windows.yml  release.yaml  release_binary.yaml  release_linux_mac_bin.yaml  release_windows_bin.yaml  tox.yml  typing_checker.yaml
docs/: README.md  docs-requirements.txt  hooks.py  index.md  mkdocs.yml  netlify.toml
docs/api/: README.md
docs/docs/: hooks.py  index.md  service-worker.js
docs/docs/SDK/: README.md
docs/docs/api/: README.md
docs/docs/changelog/: README.md
docs/docs/compliance/: README.md
docs/docs/guide/: README.md
docs/docs/privacy/: README.md
docs/docs/public/: manifest.json
docs/docs/remediation/: README.md
docs/docs/stylesheets/: extra.css
docs/docs/tutorials/: run-your-first-scan.md
docs/enterprise/: README.md
docs/faq/: README.md
docs/guide/: README.md
docs/ide/: README.md
docs/overrides/layouts/: home.html
docs/product/: README.md
docs/remediation/: README.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-06-08-priority-queue-test-agents-plan.md  2026-07-11-ticket-asset-group.md
docs/superpowers/specs/: 2026-06-08-priority-queue-test-agents-design.md  2026-07-11-ticket-asset-group-design.md
docs/terms/: README.md
docs/user_management/: README.md
src/: cli.py  ostorlab.py
src/agent/: agent.py
src/agent/schema/: spec.yaml
src/apis/: login.py  request.py  runner.py
src/cli/: __init__.py  rootcli.py
src/cli/auth/: auth.py
src/cli/scan/: TODO.md  android_apk_file.py  android_store_package_name.py  ios_ipa_bundle_id.py  ios_ipa_file.py  network_ip.py  scan.py  web_app.py
src/ostorlab/: __init__.py  configuration_manager.py  console.py  exceptions.py  main.py  mcp_message_emitter.py
src/ostorlab/agent/: __init__.py  agent.py  agent_fetcher.py  definitions.py  install_agent.py
src/ostorlab/apis/: add_scanner_state.py  agent_details.py  agent_download_token.py  agent_group.py  agent_search.py  assets.py  auth.py  authenticated_runner.py  create_agent_scan.py  create_api_key.py  get_agent_details.py  login.py  logout.py  public_runner.py  request.py  revoke_api_key.py  runner.py  scan.py  scan_create.py  scan_info.py  scan_list.py  scan_reserve.py  scan_stop.py  scan_update_state.py  scan_vulnz.py  scanner_config.py  scans_discover.py  test_credentials_create.py  vulnz_describe.py  vulnz_list.py
src/ostorlab/assets/: __init__.py  agent.py  android_aab.py  android_apk.py  android_store.py  api_schema.py  asset.py  domain_name.py  file.py  file_asset.py  generic_file.py  harmonyos_aab.py  harmonyos_apk.py  harmonyos_app.py  harmonyos_hap.py  harmonyos_rpk.py  harmonyos_store.py  ios_ipa.py  ios_store.py  ios_testflight.py  ip.py  ip_address.py  ipv4.py  ipv6.py  link.py  message.py  multi_asset.py  repository.py  repository_archive.py  risk.py  ticket.py
src/ostorlab/cli/: __init__.py  agent_fetcher.py  console.py  docker_requirements_checker.py  dumpers.py  input_validators.py  install_agent.py  rootcli.py  types.py  utils.py
src/ostorlab/models/: models.py
src/ostorlab/runtimes/: __init__.py  agent_builder.py  agent_group_builder.py  definitions.py  registry.py  reporter.py  runtime.py
src/ostorlab/scanner/: callbacks.py  handler.py  nats_conf.py  resource_checker.py  scan_handler.py  scanner_conf.py  start.py
src/ostorlab/serve_app/: app.py  common.py  export_utils.py  import_utils.py  oxo.py  schema.py  types.py
src/ostorlab/testing/: agent.py
src/ostorlab/ui/: serve_ui.py
src/ostorlab/utils/: definitions.py  defintions.py  dictionary_minifier.py  ip.py  log_helper.py  (+12 more)
tests/: conftest.py  mcp_message_emitter_test.py
tests/agent/: agent_test.py  definitions_test.py  dummyagent.yaml  get_system_load_test.py  settings.binproto  system_test.py
tests/apis/: add_scanner_state_test.py  agent_details_test.py  agent_download_token_test.py  agent_group_test.py  agent_search_test.py  authenticated_runner_test.py  create_agent_scan_test.py  create_api_key_test.py  create_asset_test.py  login_test.py  revoke_api_key_test.py  scan_create_test.py  scan_info_test.py  scan_list_api.py  scan_list_test.py  scan_reserve_test.py  scan_stop_test.py  scan_update_state_test.py  scanner_runner_test.py  scans_discover_test.py  test_credentials_create_test.py
tests/assets/: agent_test.py  android_aab_test.py  android_apk_test.py  android_store_test.py  api_schema_test.py  asset_test.py  domain_name_test.py  file_test.py  generic_file_test.py  ios_ipa_test.py  ios_store_test.py  ios_testflight_test.py  ip_test.py  ipv4_test.py  link_test.py  multi_asset_test.py  repository_archive_test.py  repository_test.py  ticket_test.py  vulnerability_test.py
tests/cli/: docker_requirements_checker_test.py  input_validators_test.py  scan.py  test_agent_fetcher.py  test_console.py  test_rootcli.py  test_types.py
tests/files/: android.apk  asset_group.yaml  invalid_test_group.yaml  ios.ipa  test.ipa  test_group.yaml
tests/models/: models_test.py
tests/runtimes/: definitions_test.py  multi_asset_bundling_test.py  runtime_tests.py
tests/scanner/: callbacks_test.py  handler_test.py  resource_checker_test.py  scan_handler_test.py  scanner_test.py  start_test.py  test_start.py
tests/serve_app/: common_test.py  export_utils_test.py  import_utils_test.py  oxo_test.py
tests/testing/: agent_test.py
tests/utils/: definitions_test.py  dictionary_minifier_test.py  reporter_test.py  scanner_state_reporter_test.py  strings_test.py  version_test.py  volumes_test.py
(+887 files in other folders)
