# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = ostorlab
description = Ostorlab Agent and Extensibility CLI and SDK
author = ostorlab team
author_email = legends@ostorlab.dev
license = Apache-2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ostorlab/ostorlab
version=0.2.18
project_urls =
    Documentation = https://docs.ostorlab.co/
    Source = https://github.com/Ostorlab/ostorlab
    Changelog = https://docs.ostorlab.co/changelog/
    Tracker = https://github.com/Ostorlab/ostorlab/issues
    Twitter = https://twitter.com/OstorlabSec

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    click
    docker
    importlib-metadata; python_version<"3.8"
    jsonschema>=4.4.0
    protobuf>=3.19.4
    requests
    rich
    ruamel.yaml
    tenacity
    sqlalchemy
    semver
    markdownify


[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* = *.json, *.md


[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ostorlab[PDF]` like:
# PDF = ReportLab; RXP

# Add here agents requirements (semicolon/line-separated)
agent = 
    Werkzeug
    aio-pika==6.8.1
    flask
    importlib-metadata; python_version<"3.8"
    jsonschema>=4.4.0
    protobuf>=3.19.4
    ruamel.yaml
    tenacity
    semver


# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-asyncio
    pytest-mock
    pytest-timeout
    requests_mock


[options.entry_points]
# Add here console scripts like:
console_scripts =
    ostorlab = ostorlab:main
pytest11 =
    pytest_ostorlab = ostorlab.testing.agent

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags or add a --no-cov flag to avoid this pytest issue.
addopts =
    --cov ostorlab --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
