# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = ostorlab
description = OXO Scanner Orchestrator for the Modern Age.
author = Ostorlab
author_email = oxo@ostorlab.dev
license = Apache-2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ostorlab/ostorlab
version=1.0.4
project_urls =
    Documentation = https://oxo.ostorlab.co/
    Source = https://github.com/Ostorlab/oxo
    Changelog = https://github.com/Ostorlab/oxo/releases
    Tracker = https://github.com/Ostorlab/oxo/issues
    Twitter = https://twitter.com/OstorlabSec

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    click
    docker
    importlib-metadata; python_version<"3.8"
    jsonschema>=4.4.0
    protobuf~=3.20
    httpx
    rich
    ruamel.yaml
    tenacity
    sqlalchemy~=1.4
    semver>=3.0.0
    markdownify
    alembic
    py-ubjson
    nats-py

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* = *.json, *.md, *.config, py.typed, alembic.ini, script.py.mako


[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ostorlab[PDF]` like:
# PDF = ReportLab; RXP

# Add here agents requirements (semicolon/line-separated)
agent =
    Werkzeug~=2.3
    aio-pika
    flask
    importlib-metadata; python_version<"3.8"
    jsonschema>=4.4.0
    protobuf~=3.20
    ruamel.yaml
    tenacity
    semver
    redis
    google-cloud-logging
    opentelemetry-distro
    opentelemetry-exporter-jaeger
    opentelemetry-exporter-gcp-trace

google-cloud-logging =
    google-cloud-logging


# Add here test requirements (semicolon/line-separated)
testing =
    setuptools>=65.5.1
    pytest
    pytest-cov
    pytest-asyncio
    pytest-mock
    pytest-timeout
    pytest-httpx

scanner =
    psutil
    python-daemon

[options.entry_points]
# Add here console scripts like:
console_scripts =
    ostorlab = ostorlab:main
    oxo = ostorlab:main
pytest11 =
    pytest_ostorlab = ostorlab.testing.agent

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags or add a --no-cov flag to avoid this pytest issue.
addopts =
    --cov ostorlab --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
